<resources>
    <string name="app_name">Quản Lý Tài Chính</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="language">
        <item>Tiếng Việt</item>
    </string-array>
    <string-array name="spinnerItems">
        <item>Khoản chi</item>
        <item>Khoản thu</item>
        <item>Tất cả các khoản</item>
        <!--<item>Thu nhập ròng</item>-->
    </string-array>
    <string-array name="spinnerSelect">
        <item>Theo nhóm</item>
        <item>Theo thời gian</item>
    </string-array>
    <string-array name="curency">
        <item>Việt Nam Đồng</item>
    </string-array>

    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="show_error_empty">Không được để trống</string>
    <string name="show_error_email_illegal">Định dạng email không hợp lệ</string>
    <string name="show_error_length_password">Độ dài mật khẩu phải lớn hơn hoặc bằng 8 ký tự</string>
    <string name="show_error_connect_internet">Bạn cần kết nối Internet</string>
    <string name="show_title_prodialog">Thông báo:</string>
    <string name="show_title_registration">Đang đăng ký, vui lòng chờ trong giây lát...</string>
    <string name="show_complete_registration">Đăng ký thành công</string>
    <string name="show_error_registration_fail">Đăng ký không thành công</string>
    <string name="show_notification_sent_change_password_to_email">Đã gửi đường dẫn thay đổi mật khẩu đến email của bạn</string>
    <string name="show_notification_send_email">Email đã được gửi đến tài khoản của bạn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="future_month">Tương lai</string>

    <!-- transaction list periods -->
    <string name="all_transaction">Tất cả giao dịch</string>
    <string name="all_time">Tất cả thời gian</string>
    <string name="today">Hôm nay</string>
    <string name="last7days">7 ngày trước</string>
    <string name="last15days">2 tuần trước</string>
    <string name="last30days">Last 30 Days</string>
    <string name="last_month">Tháng trước</string>
    <string name="last3months">3 tháng trước</string>
    <string name="last6months">6 tháng trước</string>
    <string name="current_month">Tháng này</string>
    <string name="last_year">Năm trước</string>
    <string name="current_year">Năm nay</string>
    <string name="future_transactions">Tương lai</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>

    <string name="thismonth">Tháng này</string>
    <string name="thisquarter">Quý này</string>
    <string name="thisweek">Tuần này</string>
    <string name="thisyear">Năm nay</string>
    <string name="time">Thời lượng</string>
    <string name="time_empty">Chọn khoảng thời gian</string>
    <string name="time_from">Khoảng thời gian</string>
    <string name="time_mode_interest">Loại thời gian</string>
    <string name="next_month">Tháng sau</string>
    <string name="next_web">Tiếp</string>
    <string name="nextmonth">Tháng tới</string>
    <string name="nextquarter">Quý tới</string>
    <string name="nextweek">Tuần tới</string>
    <string name="nextyear">Năm tới</string>
    <string name="add_budget">Thêm Ngân Sách</string>
    <string name="remain_prefix">Còn</string>
    <string name="day">ngày</string>
    <string name="notification_system_developing">Hệ thống đang phát triển</string>
    <string name="add_transaction">Thêm giao dịch</string>
    <string name="select_category">Chọn nhóm</string>
    <string name="date_today">Hôm nay</string>
    <string name="select_wallet">Chọn ví của bạn</string>
    <string name="complete">Complete</string>
    <string name="add_transaction_complete">AddTransactionActivityComplete</string>
    <string name="feature_developing">Tính năng đang phát triển</string>
    <string name="show_error_password_not_coincidence">Mật khẩu nhập lại không đúng, vui lòng nhập lại</string>
    <string name="change_password_not_complete">Thay đổi mật khẩu không thành công</string>
    <string name="not_complete_change_password">Thay đổi mật khẩu không thành công, vui lòng đăng nhập lại để thực hiện thao tác này!!!</string>
    <string name="change_password_complete">Thay đổi mật khẩu thành công, vui lòng đăng nhập lại</string>
    <string name="password_current_incorrect">Mật khẩu hiện tại không đúng</string>
    <string name="detail_transaction">Chi tiết giao dịch</string>
    <string name="edit_transaction">Thay đổi giao dịch</string>
    <string name="transaction_book">Sổ giao dịch</string>
    <string name="titile_notification">Thông báo</string>
    <string name="notification_wait">Vui lòng đợi trong giây lát...</string>
    <string name="information_account">Thông tin tài khoản</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="over_view_month">Tổng quan tháng</string>
    <string name="loan_you">nợ bạn </string>
    <string name="you_loan">bạn nợ </string>
    <string name="pay_book">Sổ nợ</string>
    <string name="format_date">dd/MM/yyyy</string>
    <string name="tendency">Xu hướng</string>
    <string name="plan">Kế hoạch</string>
    <string name="budget">Ngân sách</string>
    <string name="recurring_transactions">Giao dịch định kỳ</string>
    <string name="communication">Giao tiếp</string>
    <string name="share">Chia sẻ</string>
    <string name="send">Gửi</string>
    <string name="add">Thêm</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="log_out">Đăng xuất</string>
    <string name="hint_0d">0đ</string>
    <string name="hint_select_category">Chọn loại giao dịch</string>
    <string name="hint_note">Ghi chú</string>
    <string name="text_today">Hôm nay</string>
    <string name="hint_select_wallet">Chọn ví</string>
    <string name="text_text">Quản Lý Tài Chính sẽ giúp bạn quản lý chi tiêu, ví tiền của bạn để cân đối việc sử dụng tiền của bạn.</string>
    <string name="remaining_amount">Số tiền còn lại</string>
    <string name="money_for_wallet">Bạn có bao nhiêu tiền cho ví của bạn</string>
    <string name="hint_123456789">vd:123456789</string>
    <string name="continue_">Tiếp Tục</string>
    <string name="select_type_money">Lựa chọn loại tiền tệ cho bạn</string>
    <string name="you_can_select_after">Bạn có thể chọn sau</string>
    <string name="select_time">Chọn thời gian</string>
    <string name="time_out">Đã hết hạn</string>
    <string name="overspending">Bội chi</string>
    <string name="remain">Còn lại</string>
    <string name="budget_detail">Chi tiết ngân sách</string>
    <string name="title_delete_budget">Xóa ngân sách này?</string>
    <string name="messing_delete">Bạn có chắc chắn muốn xóa?</string>
    <string name="comfirm">Đồng ý</string>
    <string name="no">Không</string>
    <string name="title_delete_transaction">Xóa giao dịch này?</string>
    <string name="change_budget">Thay đổi ngân sách</string>
    <string name="date_start">Ngày bắt đầu</string>
    <string name="date_end">Ngày kết thúc</string>
    <string name="select_date">Vui lòng chọn ngày!</string>
    <string name="title_activity_settings">Cài đặt</string>

    <!-- Preference Titles -->
    <string name="messages_header">Thông điệp</string>
    <string name="sync_header">Đồng bộ hóa</string>
    <string name="sync">sync</string>
    <string name="notifi">notifi</string>
    <string name="signature">signature</string>
    <string name="send_to_email">send_to_email</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Chữ ký của bạn</string>
    <string name="reply_title">Default reply action</string>
    <string name="notification">Bật thông báo</string>>

    <!-- Sync Preferences -->
    <string name="sync_title">Đồng bộ hóa</string>
    <string name="send_content_to_email">Tự động gửi thông báo đến email
    </string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="start_sync">Vui lòng bật chức năng Đồng bộ hóa</string>
</resources>
