<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/transaction_book" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/tendency" />
        <item
            android:id="@+id/nav_paybook"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/pay_book"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/plan">
            <menu>
                <item
                    android:id="@+id/nav_budget"
                    android:icon="@drawable/ic_bk_budget"
                    android:title="@string/budget" />

                <item
                    android:id="@+id/nav_periodic_transaction"
                    android:icon="@drawable/ic_update_black"
                    android:title="@string/recurring_transactions" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/add">
            <menu>
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_account_circle_black_24dp"
                    android:title="@string/account_information">

                </item>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logoutrenew_black_24dp"
                    android:title="@string/log_out">

                </item>
            </menu>
        </item>

    </group>

</menu>
