<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.activity.ChooseCurrencyActivity">


    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="@dimen/layout_width_48dp"
        android:layout_height="@dimen/layout_width_48dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgBack"
        android:layout_marginTop="@dimen/margin_top_20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/select_type_money"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_size_20dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:gravity="center"
        android:text="@string/you_can_select_after" />

    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </Spinner>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="@dimen/layout_250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:background="@color/welcome_activity_background"
        android:text="@string/continue_"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_20dp" />

</RelativeLayout>