<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.activity.BalanceActivity">

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="@dimen/layout_width_48dp"
        android:layout_height="@dimen/layout_width_48dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgBack"
        android:layout_marginTop="@dimen/margin_20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/remaining_amount"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_size_20dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:gravity="center"
        android:text="@string/money_for_wallet" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_attach_money_black_48dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_50dp"
                android:background="@null"
                android:hint="@string/hint_123456789"
                android:inputType="numberDecimal"
                android:paddingLeft="@dimen/padding_10dp"
                android:textSize="@dimen/text_size_25dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="@dimen/layout_250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnContinue"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:background="@color/welcome_activity_background"
        android:text="@string/continue_"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_20dp"/>

</RelativeLayout>